--- a/src/components/index.css
+++ b/src/components/index.css
@@ -5,6 +5,23 @@ body {
   background: #fff;
   -webkit-font-smoothing: antialiased;
 }
+#rcc-confirm-button {
+  font-family: inherit !important;
+}
+.gdpr-checkbox {
+  transform: translateY(5px);
+}
+.form-checkbox {
+  transition: all 0.3s ease;
+}
+.form-checkbox:focus {
+  box-shadow: 0 0 0 3px rgb(246 135 179 / 50%);
+  border-color: black;
+}
+.required {
+  color: #ea1537;
+  font-weight: bold;
+}
 .slick-slide .c {
   display: inline-block;
   vertical-align: middle;
